--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,20 +1,20 @@
 
 
-<h1 class="display-3 text-capitalize text-center" >claudia alenda</h1>
+<h1 class="display-3 text-capitalize text-center" >claudia Alenda</h1>
 
 <div class="bg-secondary w-50 carousel mx-auto d-flex justify-content-center  ">
-  
+
   <div id="carouselExampleControls" class="carousel  slide" data-ride="carousel">
     <div class="carousel-inner w-75 mx-auto ">
-      
+
       <div class="carousel-item active">
         <img class="d-block w-100" [src]="'assets/img/ale1.jpg'" alt="First slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" [src]="'assets/img/ale2.jpg'" alt="Second slide">
       </div>
-      
-      
+
+
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -25,5 +25,5 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
- 
+
 </div>
